Add a phpstan exception

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -58,3 +58,4 @@ parameters:
 		- '#always exists and is always falsy#'
 		- '#has an unused use#'
 		- '#Cannot use array destructuring on#'
+		- '#of method FrmFieldName::\_\_construct#'
