--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -18,13 +18,13 @@ jobs:
       matrix:
         include:
           - php: 7.4
-            wordpress: trunk
+            wordpress: master
             multisite: 0
           - php: 8.0
-            wordpress: trunk
+            wordpress: master
             multisite: 0
           - php: 8.1
-            wordpress: trunk
+            wordpress: master
             multisite: 0
 
     name: PHP ${{ matrix.php }} tests in WP ${{ matrix.wordpress }}
