Ignore formidableforms1.css

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ pro
 .phpintel
 frm.min.js
 formidableforms.css
+formidableforms1.css
 formidable.zip
 languages/formidable-js.pot
 languages/formidable-js-strings.php
