--- a/.gitattributes
+++ b/.gitattributes
@@ -31,4 +31,4 @@ phpstan.neon export-ignore
 readme.md export-ignore
 tests export-ignore
 webpack.config.js export-ignore
-/stripe/js/frmstrp.js
+/stripe/js/frmstrp.js export-ignore
