--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@wordpress/i18n": "^3.14.0",
 		"@wordpress/url": "^2.17.0",
 		"classnames": "^2.2.6",
+		"dompurify": "^3.0.5",
 		"google-closure-compiler": "^20181210.0.0",
 		"npm": "^8.19.2",
 		"react": "^16.13.1",
