--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
 			"@babel/preset-env",
 			{
 				"targets": {
-					"browsers": ["last 2 versions", "ie >= 9"]
+					"browsers": ["last 2 versions", "ie >= 11"]
 				}
 			}
 		],
@@ -16,6 +16,7 @@
 		]
 	],
 	"plugins": [
+		"@babel/plugin-syntax-jsx",
 		[
 			"@wordpress/babel-plugin-makepot",
 			{
