--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,7 @@ trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 4
 
-[*.{md,json,yml,xml,dist}]
+[*.{md,yml,xml,dist}]
 indent_style = space
 indent_size = 2
 
