--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,17 @@
 {
 	"root": true,
-	"parser": "babel-eslint",
+	"parser": "@babel/eslint-parser",
+	"parserOptions": {
+		"requireConfigFile": false,
+		"sourceType": "module",
+		"babelOptions": {
+			"presets": ["@babel/preset-env", "@babel/preset-react"],
+			"plugins": ["@babel/plugin-syntax-jsx"]
+		},
+		"ecmaFeatures": {
+			"jsx": true
+		}
+	},
 	"extends": [
 		"wordpress",
 		"plugin:react/recommended",
@@ -11,12 +22,6 @@
 		"es6": true,
 		"node": true,
 		"mocha": true
-	},
-	"parserOptions": {
-		"sourceType": "module",
-		"ecmaFeatures": {
-			"jsx": true
-		}
 	},
 	"globals": {
 		"wp": true,
