--- a/package.json
+++ b/package.json
@@ -36,19 +36,17 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.17",
+		"@babel/eslint-parser": "^7.22.15",
+		"@babel/plugin-syntax-jsx": "^7.22.5",
+		"@babel/plugin-transform-react-jsx": "^7.22.15",
 		"@babel/preset-env": "^7.22.15",
+		"@babel/preset-react": "^7.22.15",
 		"@svgr/webpack": "^8.1.0",
 		"@wordpress/babel-plugin-makepot": "^5.25.0",
 		"@wordpress/babel-preset-default": "^7.25.0",
 		"@wordpress/eslint-plugin": "^15.1.0",
-		"babel-core": "^6.26.3",
-		"babel-eslint": "^10.1.0",
 		"babel-loader": "^9.1.3",
-		"babel-plugin-dynamic-import-webpack": "^1.1.0",
 		"babel-plugin-styled-components": "^2.1.4",
-		"babel-plugin-transform-react-jsx": "^6.24.1",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-react": "^6.24.1",
 		"copy-webpack-plugin": "^11.0.0",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.49.0",
