Move js into standard file structure Remove a heading that is never displayed

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,10 @@
+# Exclude auto generated files.
 **/*.min.js
+**/*.js.map
 **/formidable_blocks.js
 **/formidable_overlay.js
+**/formidable-templates.js
+
 **/node_modules/**
 **/vendor/**
 build
