--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
 	},
     "require-dev": {
 		"yoast/phpunit-polyfills": "^1.0",
-		"php-stubs/wordpress-stubs": "^5.7.0"
+		"php-stubs/wordpress-stubs": "^5.9",
+		"phpstan/phpstan": "^1.4"
     },
 	"config": {
 		"allow-plugins": {
