Revert part of last commit The min js from Terser was larger than the default

--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,7 @@ codesniffer.xml export-ignore
 composer.lock export-ignore
 composer.json export-ignore
 /js/src/ export-ignore
+/js/*.js.map export-ignore
 /js/jquery/jquery.editinplace.js export-ignore
 node_modules export-ignore
 package-lock.json export-ignore
