--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ formidableforms1.css
 formidable.zip
 languages/formidable-js.pot
 languages/formidable-js-strings.php
+js/*.js.LICENSE.txt
 
 # Node
 node_modules
