--- a/.github/workflows/qadeploy.yml
+++ b/.github/workflows/qadeploy.yml
@@ -11,13 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: 🚚 Get latest code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3.5.0
 
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.1
       with:
-        server: ftp.gyj.ilw.mybluehost.me
-        protocol: ftps
+        server: ${{ secrets.FRM_FTP_HOST }}
         server-dir: ${{ github.event.repository.name }}-${{ github.event.pull_request.head.ref }}/
         username: ${{ secrets.FRM_FTP_USERNAME }}
         password: ${{ secrets.FRM_FTP_PASSWORD }}
@@ -40,13 +39,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: 🚚 Get latest code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3.5.0
 
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.1
       with:
-        server: ftp.gyj.ilw.mybluehost.me
-        protocol: ftps
+        server: ${{ secrets.FRM_FTP_HOST }}
         server-dir: ${{ github.event.repository.name }}-beta/
         username: ${{ secrets.FRM_FTP_USERNAME }}
         password: ${{ secrets.FRM_FTP_PASSWORD }}
