--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -18,10 +18,10 @@ jobs:
       matrix:
         include:
           - php: 7.4
-            wordpress: master
+            wordpress: trunk
             multisite: 0
           - php: 8.0
-            wordpress: master
+            wordpress: trunk
             multisite: 0
 
     name: PHP ${{ matrix.php }} tests in WP ${{ matrix.wordpress }}
