--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,19 @@
             "classes/views/"
 		]
 	},
-    "require-dev": {
-		"yoast/phpunit-polyfills": "^1.0",
+	"require-dev": {
 		"php-stubs/wordpress-stubs": "^5.9",
+		"yoast/phpunit-polyfills": "^1.0",
+		"wp-coding-standards/wpcs": "^3.0",
+		"automattic/vipwpcs": "^3.0",
+		"squizlabs/php_codesniffer": "^3.9",
 		"phpstan/phpstan": "^1.4"
-    },
+	},
 	"config": {
 		"allow-plugins": {
-			"composer/installers": true
+			"composer/installers": true,
+			"phpstan/extension-installer": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true
 		}
 	}
 }
