--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -14,9 +14,9 @@ jobs:
       - name: "💽  Installing PHP, Composer, CS2PR"
         uses: shivammathur/setup-php@2.10.0
         with:
-          php-version: '7.4'
+          php-version: 8.0
           coverage: none
-          ini-values: display_errors = on, error_reporting = E_ALL
+          ini-values: display_errors = on, error_reporting = E_ALL, opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
           tools: composer
 
       - name: "💽  Installing Composer Packages"
