--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -15,7 +15,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.1
-      - name: Install dependencies
+
+      - name: "💽  Installing PHP, Composer, CS2PR"
+        uses: shivammathur/setup-php@2.30.2
+        with:
+          php-version: 8.0
+          coverage: none
+          ini-values: display_errors = on, error_reporting = E_ALL, opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
+          tools: composer
+
+      - name: "💽  Installing Composer Packages"
         run: composer install --dev --prefer-dist --no-progress --no-suggest
 
       - name: PHPCS check
