--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -9,15 +9,26 @@ jobs:
 
     steps:
       - name: "📥 Fetching Repository Contents"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4.1.1
 
       - name: "💽  Installing PHP, Composer, CS2PR"
-        uses: shivammathur/setup-php@2.10.0
+        uses: shivammathur/setup-php@2.30.2
         with:
           php-version: 8.0
           coverage: none
           ini-values: display_errors = on, error_reporting = E_ALL, opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
           tools: composer
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          restore-keys: ${{ runner.os }}-composer-
 
       - name: "💽  Installing Composer Packages"
         run: composer install
