--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.1
+      - name: Install dependencies
         run: composer install --dev --prefer-dist --no-progress --no-suggest
 
       - name: PHPCS check
