--- a/phpstan.neon
+++ b/phpstan.neon
@@ -21,7 +21,6 @@ parameters:
 		booleansInConditions: false
 		uselessCast: false
 		requireParentConstructorCall: false
-		disallowedConstructs: false
 		overwriteVariablesWithLoop: false
 		closureUsesThis: false
 		numericOperandsInArithmeticOperators: false
@@ -79,3 +78,4 @@ parameters:
 		- "#Offset 'custom_style' on#"
 		- '#Call to an undefined method FrmFieldType::get\_file\_id#'
 		- '#should be contravariant with#'
+		- '#Construct empty\(\) is not allowed. Use more strict comparison#'
