--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -11,6 +11,7 @@ on:
 name: PHPUnit
 jobs:
   build-test:
+    if: contains(github.event.pull_request.labels.*.name, 'run tests')
     runs-on: ubuntu-20.04
     env:
       WP_MULTISITE: ${{ matrix.multisite }}
