--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
 		"squizlabs/php_codesniffer": "^3.9",
 		"phpstan/phpstan": "^1.4",
 		"phpstan/phpstan-strict-rules": "^1.5",
-		"phpstan/extension-installer": "^1.3"
+		"phpstan/extension-installer": "^1.3",
+		"slevomat/coding-standard": "~8.0"
 	},
 	"config": {
 		"allow-plugins": {
