--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
 		"phpstan/phpstan-strict-rules": "^1.5",
 		"phpstan/extension-installer": "^1.3",
 		"slevomat/coding-standard": "~8.0",
-		"friendsofphp/php-cs-fixer": "^3.54"
+		"friendsofphp/php-cs-fixer": "^3.54",
+		"rector/rector": "^1.0"
 	},
 	"config": {
 		"allow-plugins": {
