--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -19,4 +19,4 @@ jobs:
         run: composer install --dev --prefer-dist --no-progress --no-suggest
 
       - name: Rector check
-        run: .vendor/bin/rector process --dry-run
+        run: ./vendor/bin/rector process --dry-run
