Drop old composer option

--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Install dependencies
-        run: composer install --dev --prefer-dist --no-progress --no-suggest
+        run: composer install --dev --prefer-dist --no-progress
 
       - name: Rector check
         run: ./vendor/bin/rector process --dry-run
