--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,12 +1,77 @@
-name: End-to-end tests
-on: push
+name: Build And Test
+on: [push, pull_request]
 jobs:
-  cypress-run:
-    runs-on: ubuntu-22.04
+  plugin:
+    name: Plugin (PHP ${{ matrix.php }} - WP ${{ matrix.wp }})
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        php: [7.3, 7.4]
+        wp: ['trunk']
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_DATABASE: wordpress
+          MYSQL_USER: root
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+      - name: Check out source code
+        uses: actions/checkout@v4.1.4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '${{ matrix.php }}'
+          extensions: mysql, zip
+          coverage: none
+          tools: composer, wp-cli
+
+      - name: Install dependencies
+        run: COMPOSER_ROOT_VERSION=dev-master composer install --prefer-dist --no-progress
+
+      - name: Start MySQL server
+        run: sudo service mysql start
+
+      - name: Prepare test database
+        run: |
+          export MYQSL_HOST=127.0.0.1
+          export MYSQL_TCP_PORT=${{ job.services.mysql.ports['3306'] }}
+          mysql -e 'CREATE DATABASE IF NOT EXISTS wordpress;' -uroot -proot
+          mysql -e 'GRANT ALL PRIVILEGES ON wordpress.* TO "wordpress"@"127.0.0.1" IDENTIFIED BY "password1"' -uroot -proot
+          mysql -e 'GRANT ALL PRIVILEGES ON wordpress_scaffold.* TO "wordpress"@"127.0.0.1" IDENTIFIED BY "password1"' -uroot -proot
+
+      - name: Install WordPress
+        run: |
+          sudo mkdir -p /usr/src/wordpress/
+          sudo chmod o+w /usr/src/wordpress/
+          cd /usr/src/wordpress/
+          wp core download --version=${{ env.WP_VERSION }}
+          wp config create --dbname=wordpress --dbuser=root --dbpass=root --allow-root --debug
+          wp core install --url=http://localhost:8080 --title=Test --admin_user=admin --admin_password=password \
+            --admin_email=admin@local.test --skip-email --allow-root
+          wp rewrite structure '/%postname%'
+          cd ${{ github.workspace }}
+          cp -R ${{ github.workspace }} /usr/src/wordpress/wp-content/plugins/testing-wp-install
+          sudo rm -rf /usr/src/wordpress/wp-content/plugins/testing-wp-install/cypress
+          sudo mv /usr/src/wordpress/* ${{ github.workspace }}
+        env:
+          WP_VERSION: ${{ matrix.wp }}
+
+      - name: Start PHP server
+        run: nohup php -S localhost:8080 > php.log 2>&1 &
+
+      - name: Install NPM packages
+        run: npm ci
+        env:
+          CYPRESS_INSTALL_BINARY: "0"
+
+      - name: Run Cypress
+        run: npx cypress install && npx cypress cache list
+      - uses: cypress-io/github-action@v6
+        with:
+          install: false
