--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -54,4 +54,4 @@ jobs:
         run: nohup php -S localhost:8080 > php.log 2>&1 &
 
       - name: Run Cypress
-      - uses: cypress-io/github-action@v6
+        uses: cypress-io/github-action@v6
