--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -55,3 +55,5 @@ jobs:
 
       - name: Run Cypress
         uses: cypress-io/github-action@v6
+        with:
+          wait-on: 'http://localhost:8080'
