--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -50,10 +50,11 @@ jobs:
         env:
           WP_VERSION: ${{ matrix.wp }}
 
-      - name: Start PHP server
-        run: nohup php -S localhost:8080 > php.log 2>&1 &
-
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
+          # Start PHP server
+          start: php -S localhost:8080
           wait-on: 'http://localhost:8080'
+          # wait for 2 minutes for the server to respond
+          wait-on-timeout: 120
