Add the bin path/index.js for cypress

--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^4.15.1"
 	},
+	"bin": {
+		"cypress-wp-setup": "./tests/cypress/index.js"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Strategy11/formidable-forms.git"
