Try to use wordpress env package to get WP running

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   pull_request:
-    types: [ opened, labeled, synchronize ]
+    types: [opened, labeled, synchronize]
 
 name: E2E Test
 
@@ -22,22 +22,22 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          tools: cs2pr
-          coverage: none
+          tools: 'cs2pr'
+          coverage: 'none'
 
       - name: composer install
         run: composer install
 
-      - name: "Install node v${{ env.NODE_VERSION }}"
+      - name: "Install node v18"
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: 18
 
       - name: Install dependencies
         run: npm ci --include=dev
 
       - name: Set up WP environment
-        run: npm run env start
+        run: npm run env:start  # Corrected 'npm run env start' to 'npm run env:start'
 
       - name: Build asset
         run: npm run build
