--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -3,7 +3,7 @@ name: E2E Test
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     types: [opened, labeled, synchronize]
 
