--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,34 +12,33 @@ jobs:
   cypress:
     name: Cypress - Local
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set PHP version
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-        tools: 'cs2pr'
-        coverage: 'none'
+      - name: Set PHP version
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          tools: 'cs2pr'
+          coverage: 'none'
 
-    - name: composer install
-      run: composer install
+      - name: composer install
+        run: composer install
 
-    - name: Install node v18
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+      - name: Install node v20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-    - name: Install dependencies
-      run: npm ci --include=dev
+      - name: Install dependencies
+        run: npm ci --include=dev
 
-    - name: Set up WP environment
-      run: npm run env:start  # This is corrected from 'npm run env start' to 'npm run env:start'
+      - name: Set up WP environment
+        run: npm run env:start
 
-    - name: Build asset
-      run: npm run build
+      - name: Build asset
+        run: npm run build
 
-    - name: Test
-      run: npm run e2e:run
+      - name: Test
+        run: npm run e2e:run
