--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,15 +17,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set PHP version
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-
-      - name: composer install
+      - name: Composer install
         run: composer install
 
-      - name: Install node v20
+      - name: Install Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
