Get rid of colon

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm ci --include=dev
 
       - name: Set up WP environment
-        run: npm run env:start
+        run: npm run env start
 
       - name: Build asset
         run: npm run build
