--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"phpunit": "./vendor/bin/phpunit",
 		"phpcs": "./vendor/bin/phpcs --parallel=10 ./",
 		"phpcbf": "./vendor/bin/phpcbf --parallel=10 ./",
+		"env": "wp-env",
+		"start": "wp-scripts start assets/js/scripts.js --webpack-no-externals --output-path=dist",
 		"e2e:run": "cypress run --config-file cypress.config.js"
 	},
 	"engines": {
