--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --include=dev
 
+      - name: Copy Formidable to Plugins Dir
+        run: cp -r "${GITHUB_REPOSITORY#*/}" "/tmp/wordpress/src/wp-content/plugins/formidable"
+
       - name: Set up WP environment
         run: npm run env start
 
