--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,7 +12,7 @@ jobs:
   cypress:
     runs-on: ubuntu-latest
 
-    name: Cypress - Local
+    name: Cypress
     steps:
       - name: Checkout
         uses: actions/checkout@v4
