Try another way using wp cli

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -34,13 +34,24 @@ jobs:
           php-version: 7.4
           tools: wp-cli
 
-      - name: Set up WP environment
-        run: npm run env start
+      - name: Install WordPress
+        run: |
+          wp core install
+          wp option update siteurl http://localhost:8889
+          wp option update home http://localhost:8889
 
       - name: Install Plugins
         run: |
           wp plugin uninstall --deactivate --all
           wp plugin install formidable --force
+
+      - name: Set permalinks
+        run: |
+          wp rewrite structure '/%postname%/' --hard
+          wp rewrite flush --hard
+
+      - name: Start PHP web server
+        run: sudo php -S localhost:8889 -t /usr/share/nginx/html &
 
       - name: Build asset
         run: npm run build
