--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,8 @@
 .phpunit.result.cache export-ignore
 .php-cs-fixer.php export-ignore
 .php-cs-fixer.cache export-ignore
+.wp-env.json export-ignore
+cypress.config.js export-ignore
 /bin/ export-ignore
 changelog.txt export-ignore
 codesniffer.xml export-ignore
