--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
 		"serialize-javascript": "^6.0.1",
 		"webpack": "^5.88.2",
 		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^4.15.1"
+		"webpack-dev-server": "^4.15.1",
+		"style-loader": "^3.3.4"
 	},
 	"repository": {
 		"type": "git",
