--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
 		"@wordpress/components": "^6.0.1",
 		"@wordpress/data": "^3.1.2",
 		"@wordpress/element": "^2.16.0",
-		"@wordpress/eslint-plugin": "^12.6.0",
 		"@wordpress/i18n": "^3.14.0",
 		"@wordpress/url": "^2.17.0",
 		"classnames": "^2.2.6",
@@ -63,8 +62,9 @@
 		"cross-env": "^7.0.3",
 		"cypress": "^13.8.1",
 		"eslint": "^8.49.0",
-		"eslint-config-wordpress": "^2.0.0",
+		"eslint-plugin-jsdoc": "^48.2.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "^7.20.6",
 		"serialize-javascript": "^6.0.1",
 		"webpack": "^5.88.2",
