--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -10,6 +10,7 @@ on:
 name: E2E Test
 jobs:
   cypress:
+    if: contains(github.event.pull_request.labels.*.name, 'run tests')
     runs-on: ubuntu-latest
 
     name: Cypress
