--- a/package.json
+++ b/package.json
@@ -56,21 +56,23 @@
 		"@wordpress/babel-preset-default": "^7.25.0",
 		"@wordpress/env": "^9.8.0",
 		"@wordpress/eslint-plugin": "^15.1.0",
+		"axe-core": "^4.9.1",
 		"babel-loader": "^9.1.3",
 		"babel-plugin-styled-components": "^2.1.4",
 		"copy-webpack-plugin": "^11.0.0",
 		"cross-env": "^7.0.3",
 		"cypress": "^13.8.1",
+		"cypress-axe": "^1.5.0",
 		"eslint": "^8.49.0",
 		"eslint-plugin-jsdoc": "^48.2.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "^7.20.6",
 		"serialize-javascript": "^6.0.1",
+		"style-loader": "^3.3.4",
 		"webpack": "^5.88.2",
 		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^4.15.1",
-		"style-loader": "^3.3.4"
+		"webpack-dev-server": "^4.15.1"
 	},
 	"repository": {
 		"type": "git",
