--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "^7.20.6",
+		"eslint-plugin-sonarjs": "^1.0.3",
 		"serialize-javascript": "^6.0.1",
 		"style-loader": "^3.3.4",
 		"webpack": "^5.88.2",
