--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
 		"plugin:@wordpress/eslint-plugin/recommended",
 		"plugin:react/recommended",
 		"plugin:jsx-a11y/recommended",
-		"plugin:sonarjs/recommended-legacy"
+		"plugin:sonarjs/recommended-legacy",
+		"plugin:cypress/recommended"
 	],
 	"env": {
 		"browser": true,
@@ -30,7 +31,7 @@
 		"window": true,
 		"document": true
 	},
-	"plugins": ["react", "jsx-a11y", "sonarjs"],
+	"plugins": ["react", "jsx-a11y", "sonarjs", "cypress"],
 	"settings": {
 		"react": {
 			"pragma": "wp"
