--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"cypress": "^13.8.1",
 		"cypress-axe": "^1.5.0",
 		"eslint": "^8.49.0",
+		"eslint-plugin-cypress": "^3.2.0",
 		"eslint-plugin-jsdoc": "^48.2.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-prettier": "^5.0.0",
