--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"eslint-plugin-cypress": "^3.2.0",
 		"eslint-plugin-jsdoc": "^48.2.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-no-jquery": "^2.7.0",
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "^7.20.6",
 		"eslint-plugin-sonarjs": "^1.0.3",
