--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
 		"cypress": "^13.8.1",
 		"cypress-axe": "^1.5.0",
 		"eslint": "^8.49.0",
+		"eslint-plugin-compat": "^4.2.0",
 		"eslint-plugin-cypress": "^3.2.0",
+		"eslint-plugin-ie11": "^1.0.0",
 		"eslint-plugin-jsdoc": "^48.2.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-no-jquery": "^2.7.0",
@@ -81,5 +83,10 @@
 		"type": "git",
 		"url": "https://github.com/Strategy11/formidable-forms.git"
 	},
-	"homepage": "https://formidableforms.com"
+	"homepage": "https://formidableforms.com",
+	"browserslist": [
+		"last 2 versions",
+		"not dead",
+		"ie >= 11"
+	]
 }
