--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
 		"eslint": "^8.49.0",
 		"eslint-plugin-compat": "^4.2.0",
 		"eslint-plugin-cypress": "^3.2.0",
-		"eslint-plugin-ie11": "^1.0.0",
 		"eslint-plugin-jsdoc": "^48.2.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-no-jquery": "^2.7.0",
@@ -86,7 +85,6 @@
 	"homepage": "https://formidableforms.com",
 	"browserslist": [
 		"last 2 versions",
-		"not dead",
-		"ie >= 11"
+		"not dead"
 	]
 }
