Drop ie11 eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -120,10 +120,6 @@
 		"no-jquery/no-trim": "error",
 		"no-jquery/no-type": "error",
 		"no-jquery/no-unique": "error",
-		"no-jquery/no-when": "error",
-		"ie11/no-collection-args": [ "error" ],
-		"ie11/no-for-in-const": [ "error" ],
-		"ie11/no-loop-func": [ "warn" ],
-		"ie11/no-weak-collections": [ "error" ]
+		"no-jquery/no-when": "error"
 	}
 }
