--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@wordpress/i18n": "^3.14.0",
 		"@wordpress/url": "^2.17.0",
 		"classnames": "^2.2.6",
+		"css-loader": "^7.1.1",
 		"google-closure-compiler": "^20181210.0.0",
 		"npm": "^10.5.2",
 		"react": "^16.13.1",
