--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"cross-env": "^7.0.3",
 		"cypress": "^13.8.1",
 		"cypress-axe": "^1.5.0",
+		"cypress-xpath": "^2.0.1",
 		"eslint": "^8.49.0",
 		"eslint-plugin-compat": "^4.2.0",
 		"eslint-plugin-cypress": "^3.2.0",
