--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,8 @@
 		"browser": true,
 		"es6": true,
 		"node": true,
-		"mocha": true
+		"mocha": true,
+		"cypress/globals": true
 	},
 	"globals": {
 		"wp": true,
@@ -40,6 +41,7 @@
 		}
 	},
 	"rules": {
+		"cypress/unsafe-to-chain-command": "off",
 		"camelcase": ["error", { "properties": "never" }],
 		"lines-around-comment": "off",
 		"react/display-name": "off",
