Add cypress automated HTML validation

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"cross-env": "^7.0.3",
 		"cypress": "^13.8.1",
 		"cypress-axe": "^1.5.0",
+		"cypress-html-validate": "^6.1.0",
 		"cypress-xpath": "^2.0.1",
 		"eslint": "^8.57.0",
 		"eslint-plugin-compat": "^4.2.0",
@@ -73,6 +74,7 @@
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "^7.20.6",
 		"eslint-plugin-sonarjs": "^1.0.3",
+		"html-validate": "^8.20.0",
 		"serialize-javascript": "^6.0.1",
 		"style-loader": "^3.3.4",
 		"webpack": "^5.88.2",
