--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -33,4 +33,6 @@ jobs:
         run: npm run env start
 
       - name: Test
-        run: npm run e2e:run --env FORMIDABLE_FOLDER=formidable
+        run: |
+          FORMIDABLE_FOLDER=formidable
+          npm run e2e:run
