--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -33,6 +33,4 @@ jobs:
         run: npm run env start
 
       - name: Test
-        run: |
-          FORMIDABLE_FOLDER=formidable
-          npm run e2e:run
+        run: npm run e2e:githubrun
