--- a/phpstan.neon
+++ b/phpstan.neon
@@ -41,7 +41,6 @@ parameters:
 		- '#might not be defined.#'
 		- '#no (typehint|value type|return typehint)+ specified.#'
 		- '#of echo cannot be converted to string.#'
-		- '#on an unknown class (Elementor)#'
 		- '#get_mailer\(\) expects#'
 		- '#only iterables are supported#'
 		- '#results in an error.#'
@@ -51,7 +50,9 @@ parameters:
 		- '#with no type specified#'
 		- '#in isset\(\) does not exist.#'
 		- '#has no type specified.#'
-		- '#has invalid return type#'
+		-
+			message: '#has invalid return type#'
+			path: classes/controllers/FrmSMTPController.php
 		- '#is unused.#'
 		- '#is never read, only written#'
 		- '#in empty\(\) is not falsy.#'
