--- a/.gitattributes
+++ b/.gitattributes
@@ -38,3 +38,4 @@ tests export-ignore
 webpack.config.js export-ignore
 /stripe/js/frmstrp.js export-ignore
 rector.php export-ignore
+_typos.toml export-ignore
