Update typos toml

--- a/_typos.toml
+++ b/_typos.toml
@@ -14,17 +14,20 @@ check-file = false
 extend-glob = ["*.xml"]
 check-file = false
 
+[default]
+extend-ignore-re = [
+    "/mis'",
+    "5ths deprecated",
+    "7ths and 8ths",
+    "'ND' => 'North Dakota'",
+]
+
 [default.extend-words]
-# Pevent North Dakota from changing to "AND".
-ND = "ND"
 datas = "datas"
 # This typo fix requires deprecating a method (get_select_atributes). There is an open issue to fix this.
 atributes = "atributes"
-# This is used like 7ths, 8ths. It is not a typo for the or this.
-ths = "ths"
-# This is part of a #66afe9 color setting. Typos corrects the "afe" to "safe".
-afe = "afe"
-# This is used in a regex. It is not intended to be "miss" or "mist".
-mis = "mis"
 # This is used for the Faroese locale. It is not a typo.
 fo = "fo"
+
+[default.extend-identifiers]
+66afe9 = "66afe9"
